--- a/stayle/main.css
+++ b/stayle/main.css
@@ -2,6 +2,7 @@ body{
     background-color:rgb(0, 84, 35);
     margin: 0px;
     padding: 0px;
+    justify-content: space-between;
     display: inline-block;
 }
 .profil{
@@ -18,7 +19,7 @@ bottom: -10px;
     display: flex;
     width: 70px;
     height: 40px;
-    left: 838px;
+    left: 638px;
     top: 10px;
     font-size: 15px; 
 }
@@ -178,6 +179,22 @@ height: 800px;
       
      }
        /*   myportfolio */
-    
+     .video1{
+       position:relative;
+       top: -20px;
+        background-color: #000000;
+        width: 300px;
+        height: 360px;
+     }
+     .vedio2{
+        position: absolute;
+        width: 300px;
+        height: 0px;
+       top: 380px;
+      left: 24px;
+       font-size: 12px;
+
+        color: #000000;
+     }
 }
 
