--- a/stayle/main.css
+++ b/stayle/main.css
@@ -1,12 +1,12 @@
 body{
-    background-color:rgb(247, 247, 247);
+    background-color:rgb(0, 0, 0);
     margin: 0px;
     padding: 0px;
     justify-content: space-between;
     display: inline-block;
 }
 .profil{
-background-color: rgb(0, 84, 35);
+
 width: 1500px;
 height: 600px;
 bottom: -10px;
@@ -195,7 +195,7 @@ height: 800px;
       left: 24px;
        font-size: 12px;
 
-        color: #000000;
+        color: #ffffff;
      }
      /* blog */
      .chagi-sogi{
@@ -205,10 +205,10 @@ height: 800px;
         left: 30px;
         font-size: 21px;
        
-        background-color: rgb(255, 255, 255);
+      color: rgb(255, 255, 255);
      }
      .chagi-sogi:hover{
-       color: #000000;
+        background-color: #000000;
      }
 }
 
