--- a/stayle/main.css
+++ b/stayle/main.css
@@ -183,32 +183,39 @@ height: 800px;
      .video1{
        position:relative;
        top: -20px;
-        background-color: #000000;
-        width: 352px;
+    
+        width: 392px;
         height: 360px;
      }
      .vedio2{
-        position: absolute;
-        width: 352px;
-        height: 0px;
-       top: 380px;
+       position:absolute;
+        width: 392px;
+        
+       top: 350px;
       left: 24px;
        font-size: 12px;
-
-        color: #ffffff;
+       background-color: rgb(255, 255, 255);
+        color: #000000;
      }
      /* blog */
      .chagi-sogi{
      align-items: flex-end;
         position: relative;
-        width: 460px;
+        width: 400px;
         left: 30px;
-        font-size: 21px;
-       
+        font-size: 15px;
+     
       color: rgb(255, 255, 255);
      }
-     .chagi-sogi:hover{
-        background-color: #000000;
-     }
-}
+     /* kitob */
+     
+      .kitob{
+        align-items: flex-end;
+        position: relative;
+        width: 430px;
+        left: 30px;
+        font-size: 16px;
+     
+      color: rgb(255, 255, 255);
+      }
 
