--- a/stayle/main.css
+++ b/stayle/main.css
@@ -207,6 +207,9 @@ height: 800px;
      
       color: rgb(255, 255, 255);
      }
+     .sajin{
+        width: 400px;
+     }
      /* kitob */
      
       .kitob{
