--- a/stayle/main.css
+++ b/stayle/main.css
@@ -4,6 +4,7 @@ body{
     padding: 0px;
     justify-content: space-between;
     display: inline-block;
+    box-sizing: border-box;
 }
 .profil{
 
@@ -54,7 +55,10 @@ padding: 20px;
     left: 437px;
     top: 10px;
     box-shadow: 7px 8px 3px 1px #000000;
- 
+    animation: sardor;
+    transition: 6s initial;
+    transform: rotate(360deg);
+
 }
 
 img:hover.sardor{
@@ -62,6 +66,8 @@ img:hover.sardor{
     border-radius: 45%;
     transform: rotate(50px);
     box-shadow:4px 1px 10px 5px rgb(0, 0, 0);
+   
+ 
 }
 /* icon */
 .icon-an {
@@ -70,7 +76,7 @@ img:hover.sardor{
     list-style: none;
     display: flex;
     top: 30px;
-   
+
 
 }
 .icon-item a{
@@ -114,9 +120,23 @@ height: 800px;
 }
 
 /* Blog html */
-.chagi-sogi{
+.chagi-sogi p{
+    position:absolute;
     font-size: 15px;
-
+  color: aliceblue;
+  width: 700px;
+    
+    left: 346px;
+}
+.sajin{
+    position: relative;
+    width: 700px;
+    height: 700px;
+    left: 350px;
+    border-radius: 20%;
+   
+    box-shadow: 2px 2px 4px 2px rgb(202, 202, 202);
+   
 }
 
 
@@ -138,7 +158,7 @@ height: 800px;
 }
 @media  screen and (max-width:576px){
     .profil{
-       
+       right: 0px;
         justify-content: space-between;
         width: 10px;
        
@@ -208,7 +228,11 @@ height: 800px;
       color: rgb(255, 255, 255);
      }
      .sajin{
+        right: 0px;
         width: 400px;
+        border-radius: 20%;
+   
+        box-shadow: 2px 2px 4px 2px rgb(202, 202, 202);
      }
      /* kitob */
      
@@ -225,4 +249,13 @@ height: 800px;
         width: 400px;
       }
 
+    }
+    @keyframes sardor{
+        0%{
+            transform: rotate(50deg);
+            box-shadow:4px 1px 10px 5px rgb(220, 0, 0);
+        }
+        100%{
+            transform: translate(60deg);
+        }
     }
