--- a/stayle/main.css
+++ b/stayle/main.css
@@ -157,6 +157,10 @@ height: 800px;
     }
 }
 @media  screen and (max-width:576px){
+    body{
+      position: relative;
+      left: -49px;
+    }
     .profil{
        right: 0px;
         justify-content: space-between;
@@ -219,19 +223,18 @@ height: 800px;
      }
      /* blog */
      .chagi-sogi{
-     align-items: flex-end;
         position: relative;
         width: 400px;
-        left: 30px;
         font-size: 15px;
-     
       color: rgb(255, 255, 255);
      }
      .sajin{
-        right: 0px;
+        position: relative;
+      left: 390px;
         width: 400px;
+        height: 400px;
         border-radius: 20%;
-   
+        margin: 0 auto;
         box-shadow: 2px 2px 4px 2px rgb(202, 202, 202);
      }
      /* kitob */
