--- a/stayle/main.css
+++ b/stayle/main.css
@@ -284,9 +284,14 @@ left: 13px;
         position: relative;
         width: 430px;
         left: 30px;
-        font-size: 16px;
+        font-size: 11px;
      
       color: rgb(255, 255, 255);
+      }
+      .kitob p{
+        width: 340px;
+        left: 30px;
+        font-size: 14px;
       }
       .gudag{
         width: 400px;
