--- a/stayle/main.css
+++ b/stayle/main.css
@@ -274,18 +274,18 @@ left: 13px;
       align-items: flex-end;
       position: relative;
       width: 630px;
-      left: 30px;
+      left: 10px;
       font-size: 11px;
    
     color: rgb(255, 255, 255);
     }
     .kitob p{
-      width: 490px;
-      left: 30px;
+      width: 100%;
+      left: 0px;
       font-size: 18px;
     }
     .gudag{
-      width: 520px;
+      width: 100%;
     }
 
   
