--- a/stayle/main.css
+++ b/stayle/main.css
@@ -273,7 +273,7 @@ left: 13px;
     .kitob{
       align-items: flex-end;
       position: relative;
-      width: 630px;
+      width: 100%;
       left: 10px;
       font-size: 11px;
    
