--- a/stayle/main.css
+++ b/stayle/main.css
@@ -105,8 +105,8 @@ img:hover.sardor{
 .video1{
     position: relative;
     top: 0px;
-    left: 30%;
-width: 800px;
+  
+width: 100%;
 height: 800px;
 }
 .video > p{
@@ -119,7 +119,39 @@ height: 800px;
   
 }
 /* kitob */
+
+.navbar ul{
+  position: relative;
+  left: 120px;
+  display: flex;
+list-style: none;
+}
+
+.navbar a{
+  color: aliceblue;
+  padding: 0 8px;
+  text-decoration: none;
+}
+
+.navbar a::before{
+  position: absolute;
+  top: 22px;
+  content: "";
+  width: 40px;
+  height: 2px;
+  background-color: rgb(255, 255, 255);
+  display: none;
+
+}
+.navbar li:hover a::before{
+  display: block;
+  transition: 3s;
+  background-color: rgb(136, 132, 128);
+  width: 50px;
+
+}
 .kitob{
+  padding: 6px;
  position: relative;
  left: 300px;
   color: aliceblue;
@@ -271,7 +303,8 @@ left: 13px;
    /* kitob */
    
     .kitob{
-      align-items: flex-end;
+      padding: 9px;
+     
     
       width: 100%;
       left: 10px;
@@ -353,8 +386,8 @@ left: 13px;
        position:relative;
        top: -20px;
       left: 40px;
-        width: 392px;
-        height: 360px;
+      
+
      }
      .vedio2{
        position:absolute;
@@ -378,7 +411,7 @@ left: 13px;
       margin:0 auto;
        text-align: center;
       position: relative;
-      left: 40px;
+      left: 160px;
         width: 50%;
         height: 200px;
         border-radius: 20%;
@@ -393,8 +426,9 @@ left: 13px;
       
      }
      .chagi-sogi h1{
+      width: 300px;
       position: relative;
-        left: 60px;
+        left: 110px;
         box-shadow: 1px 2px 1px 2px rgb(255, 204, 0);
      }
      /* kitob */
@@ -403,23 +437,22 @@ left: 13px;
         align-items: flex-end;
         position: relative;
         width: 100%;
-      
-        font-size: 11px;
-     
       color: rgb(255, 255, 255);
       }
+
       .kitob p{
-        width: 479px;
-        left: 40px;
+        width: 337px;
+        left: 45px;
         text-align: center;
-        font-size: 16px;
-      }
+        font-size: 18px;
+    }
+      
       .gudag{
-     
+        text-align: center;
         width:100%;
       }
     
-    }
+    
     @keyframes sardor{
         0%{
             transform: rotate(50deg);
